Save objects as normal and not as BehaviorSubject. Now we can use this objects directly in the html templates as objectService.allObjects[<objectType>] and all changes will be available inmediately.

--- a/src/app/protected/cranix/devices/add-device/add-device.component.html
+++ b/src/app/protected/cranix/devices/add-device/add-device.component.html
@@ -56,7 +56,7 @@
       <ion-item *ngIf="!adHocRoom">
         <ion-label position="stacked">{{'hwconfId'| translate}}</ion-label>
         <ion-select [(ngModel)]="device.hwconfId" name="hwconfId" [compareWith]="objectService.compareFn" required>
-          <ion-select-option *ngFor="let hw of hwConfs" value="{{hw.id}}">
+          <ion-select-option *ngFor="let hw of objectService.allObjects['hwconf']" value="{{hw.id}}">
             {{hw.name}}
           </ion-select-option>
         </ion-select>
