--- a/src/app/protected/cranix/mygroups/add-edit-guest.html
+++ b/src/app/protected/cranix/mygroups/add-edit-guest.html
@@ -58,7 +58,7 @@
                     [isMultiple]="true"
                     [(ngModel)]="selectedRooms"
                     [ngModelOptions]="{standalone: true}"
-                    [items]="rooms"
+                    [items]="objectService.allObjects['room']"
                     itemValueField="id"
                     itemTextField="name"
                     [canSearch]="true">
