--- a/src/app/protected/cranix/rooms/lists/adhoc.component.html
+++ b/src/app/protected/cranix/rooms/lists/adhoc.component.html
@@ -59,7 +59,7 @@
         rowHeight="{{authService.settings.rowHeight}}"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
         [context]="context"
-        [rowData]="rowData"
+        [rowData]="objectService.allObjects['adhocroom']"
         [columnDefs]="columnDefs"
         [defaultColDef]="defaultColDef"
         (gridReady)="onGridReady($event)">
