--- a/src/app/protected/cephalix/customers/customers.page.html
+++ b/src/app/protected/cephalix/customers/customers.page.html
@@ -54,7 +54,7 @@
     </ion-card-header>
     <ion-card-content>
       <ag-grid-angular id="agGridTable" style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-        rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}" [rowData]="rowData"
+        rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}" [rowData]="objectService.allObjects['customer']"
         [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [context]="context"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="onGridReady($event)">
       </ag-grid-angular>
