--- a/src/app/protected/cephalix/institutes/lists/institutes.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.html
@@ -54,7 +54,7 @@
     <ion-card-content>
       <ag-grid-angular id="agGridTable" style="width: 100%; height: 100%;" rowSelection="multiple"
         class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" [context]="context"
-        [rowData]="rowData" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
+        [rowData]="objectService.allObjects['institute']" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
         (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)">
       </ag-grid-angular>
