--- a/src/app/protected/cephalix/tickets/tickets.page.html
+++ b/src/app/protected/cephalix/tickets/tickets.page.html
@@ -55,7 +55,7 @@
         class="{{authService.settings.agGridThema}}"
         rowHeight="{{authService.settings.rowHeight}}"
         [context]="context"
-        [rowData]="rowData"
+        [rowData]="objectService.allObjects['ticket']"
         [columnDefs]="columnDefs"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
         (gridReady)="onGridReady($event)"
