--- a/src/app/protected/cranix/devices/lists/printers.component.html
+++ b/src/app/protected/cranix/devices/lists/printers.component.html
@@ -60,7 +60,7 @@
     </ion-card-header>
     <ion-card-content>
       <ag-grid-angular style="width: 100%; height:  100%;" class="{{authService.settings.agGridThema}}"
-        rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}" [context]="context" [rowData]="rowData"
+        rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}" [context]="context" [rowData]="objectService.allObjects['printer']"
         [columnDefs]="columnDefs" [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
         (gridReady)="onGridReady($event)" id="agGridTable">
       </ag-grid-angular>
