--- a/src/app/protected/cranix/users/lists/users.component.html
+++ b/src/app/protected/cranix/users/lists/users.component.html
@@ -58,7 +58,7 @@
     <ion-card-content>
       <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
         rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}"
-        rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}" [rowData]="rowData"
+        rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}" [rowData]="objectService.allObjects['user']"
         [columnDefs]="columnDefs" [context]="context" (gridReady)="onGridReady($event)" id="agGridTable">
       </ag-grid-angular>
     </ion-card-content>
