Fix onSubmit function. There is no parameter.

--- a/src/app/shared/actions/files-upload/files-upload.component.html
+++ b/src/app/shared/actions/files-upload/files-upload.component.html
@@ -1,4 +1,4 @@
-<form #uploadFile="ngForm" (ngSubmit)="onSubmit(uploadFile.value)">
+<form #uploadFile="ngForm" (ngSubmit)="onSubmit()">
   <ion-header translucent>
     <ion-toolbar>
       <ion-title>{{ 'Upload files' | translate }} {{ target1 }}</ion-title>
