--- a/src/app/protected/cranix/users/lists/users-import.component.html
+++ b/src/app/protected/cranix/users/lists/users-import.component.html
@@ -82,10 +82,10 @@
                 matTooltip="{{'Start the import as real import not test.' | translate }}">
                 <ion-icon slot="icon-only" color="warning" name="reload"></ion-icon>
               </ion-button>
-              <!-- ion-button color="light" *ngIf="!import.test" size="small" (click)="downloadImport(import.startTime,'pdf')"
-              matTooltip="{{'Download the password files as pdf files.' | translate }}">
-              <ion-icon slot="icon-only" color="success" name="download"></ion-icon>
-            </ion-button -->
+              <ion-button color="light" *ngIf="!import.test" size="small" (click)="downloadImport(import.startTime,'pdf')"
+                matTooltip="{{'Download the password files as pdf files.' | translate }}">
+                <ion-icon slot="icon-only" color="success" name="download"></ion-icon>
+              </ion-button>
               <ion-button color="light" *ngIf="!import.test" size="small"
                 (click)="downloadImport(import.startTime,'txt')"
                 matTooltip="{{'Download the password files as txt files.' | translate }}">
