--- a/src/app/protected/cranix/hwconfs/details/edit/hwconf-edit.page.html
+++ b/src/app/protected/cranix/hwconfs/details/edit/hwconf-edit.page.html
@@ -16,16 +16,14 @@
       <ion-card-header>
         <ion-row>
           <ion-col offset=9 size=3>
-            <ion-button size="small" type="submit"  [disabled]="!editForm.valid"
+            <ion-button size="small" type="submit" [disabled]="!editForm.valid"
               matTooltip="{{'Apply changes' | translate }}">
               <ion-icon slot="icon-only" name="checkmark-sharp"></ion-icon>
             </ion-button>
-            <ion-button size="small" (click)="cleanUp($event)"
-              matTooltip="{{'Remove arhived images' | translate }}">
+            <ion-button size="small" (click)="cleanUp($event)" matTooltip="{{'Remove arhived images' | translate }}">
               <ion-icon slot="icon-only" name="remove-circle"></ion-icon>
             </ion-button>
-            <ion-button size="small" (click)="delete($event)"
-              matTooltip="{{'Delete hwconf' | translate }}">
+            <ion-button size="small" (click)="delete($event)" matTooltip="{{'Delete hwconf' | translate }}">
               <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
             </ion-button>
           </ion-col>
@@ -34,49 +32,34 @@
       <ion-card-content>
         <ion-grid>
           <ion-row>
-            <ion-col size=12 sizeMd=6 sizeLg=4 sizeXl=3 *ngFor="let key of objectKeys;"
-              [ngSwitch]="objectService.typeOf(key,object,'edit')">
-              <ion-item *ngSwitchCase="'booleanTrue'">
-                <ion-label>{{ key | translate }}</ion-label>
-                <ion-toggle slot="start" formControlName="{{key}}" color="secondary" checked></ion-toggle>
-              </ion-item>
-              <ion-item *ngSwitchCase="'booleanFalse'">
-                <ion-label>{{ key | translate }}</ion-label>
-                <ion-toggle slot="start" formControlName="{{key}}" color="secondary"></ion-toggle>
-              </ion-item>
-              <ion-item *ngSwitchCase="'string'">
-                <ion-label position="stacked">{{ key | translate }}{{objectService.required[key]}}</ion-label>
-                <!--ion-item *ngIf="editForm.controls[key].hasError('required') && editForm.controls[key].touched"-->
-                <!--ion-label position="stacked"
-                  *ngIf="editForm.controls[key].hasError('required')  && editForm.controls[key].touched">
-                  {{ 'This field is required!' | translate }}</ion-label -->
-                <ng-template [ngIf]="objectService.selects[key]" [ngIfElse]="elseBlock">
-                  <ion-select type="text" formControlName="{{key}}" [compareWith]="objectService.compareFn"
-                    [required]="objectService.required[key]">
-                    <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">
-                      {{option | translate}}</ion-select-option>
-                  </ion-select>
-                </ng-template>
-                <ng-template #elseBlock>
-                  <ion-input type="text" formControlName="{{key}}" value="{{object[key]}}"
-                    [required]="objectService.required[key]"></ion-input>
-                </ng-template>
-              </ion-item>
-              <ion-item *ngSwitchCase="'stringRO'">
-                <ion-label position="stacked">{{ key | translate }}</ion-label>
-                <ion-input color="tertiary" type="text" formControlName="{{key}}" value="{{object[key]}}" readonly>
+            <ion-col size=12 sizeMd=6 sizeLg=4 sizeXl=3>
+              <ion-item>
+                <ion-label position="stacked">{{ 'id' | translate }}</ion-label>
+                <ion-input color="tertiary" type="text" formControlName="id" value="{{object.id}}" readonly>
                 </ion-input>
               </ion-item>
-              <ion-item *ngSwitchCase="'date'">
-                <ion-label>{{ key | translate }}</ion-label>
-                <ion-datetime formControlName="{{key}}" max="2100" value="{{object[key] | date:'yyyy-MM-dd'}}">
-                </ion-datetime>
+            </ion-col>
+            <ion-col size=12 sizeMd=6 sizeLg=4 sizeXl=3>
+              <ion-item>
+                <ion-label position="stacked">{{ 'name' | translate }}*</ion-label>
+                <ion-input type="text" formControlName="name" value="{{object.name}}" required>
+                </ion-input>
               </ion-item>
-              <ion-item *ngSwitchCase="'date-time'">
-                <ion-label>{{ key | translate }}</ion-label>
-                <ion-datetime formControlName="{{key}}" max="2100"
-                  value="{{object[key] | date:'yyyy-MM-dd HH:mm:ss Z'}}">
-                </ion-datetime>
+            </ion-col>
+            <ion-col size=12 sizeMd=6 sizeLg=4 sizeXl=3>
+              <ion-item>
+                <ion-label position="stacked">{{ 'description' | translate }}*</ion-label>
+                <ion-input type="text" formControlName="description" value="{{object.description}}" required>
+                </ion-input>
+              </ion-item>
+            </ion-col>
+            <ion-col size=12 sizeMd=6 sizeLg=4 sizeXl=3>
+              <ion-item>
+                <ion-label position="stacked">{{ 'deviceType' | translate }}*</ion-label>
+                <ion-select type="text" formControlName="deviceType" [compareWith]="objectService.compareFn" required>
+                    <ion-select-option *ngFor="let option of  objectService.selects['deviceType']" value="{{option}}">
+                      {{option | translate}}</ion-select-option>
+                  </ion-select>
               </ion-item>
             </ion-col>
           </ion-row>
@@ -90,20 +73,27 @@
       <ion-card-content>
         <ion-grid>
           <ion-row *ngFor="let part of object.partitions;">
-            <ion-col>
+            <ion-col size=1>
               <ion-item>
                 <ion-label position="stacked">{{ 'name' | translate}}</ion-label>
                 <ion-input type="text" formControlName="part-{{part.id}}-name" value="{{part.name}}"></ion-input>
               </ion-item>
             </ion-col>
-            <ion-col>
+            <ion-col size=1>
+              <ion-item lines="none">
+                <ion-button fill="clear" size="small" (click)="deletePartition(part.name)" matTooltip="{{'Delete partition' | translate }}">
+                  <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
+                </ion-button>
+              </ion-item>
+            </ion-col>
+            <ion-col size=2>
               <ion-item>
                 <ion-label position="stacked">{{ 'description' | translate}}</ion-label>
                 <ion-input type="text" formControlName="part-{{part.id}}-description" value="{{part.description}}">
                 </ion-input>
               </ion-item>
             </ion-col>
-            <ion-col>
+            <ion-col size=2>
               <ion-item>
                 <ion-label position="stacked">{{ 'OS' | translate}}</ion-label>
                 <ion-select type="text" formControlName="part-{{part.id}}-os" [compareWith]="objectService.compareFn">
@@ -111,7 +101,7 @@
                 </ion-select>
               </ion-item>
             </ion-col>
-            <ion-col>
+            <ion-col size=2>
               <ion-item>
                 <ion-label position="stacked">{{'joinType' | translate}}</ion-label>
                 <ion-select type="text" formControlName="part-{{part.id}}-joinType"
@@ -120,7 +110,7 @@
                 </ion-select>
               </ion-item>
             </ion-col>
-            <ion-col>
+            <ion-col size=2>
               <ion-item>
                 <ion-label position="stacked">{{'cloneTool' | translate}}</ion-label>
                 <ion-select type="text" formControlName="part-{{part.id}}-tool" [compareWith]="objectService.compareFn">
@@ -128,7 +118,7 @@
                 </ion-select>
               </ion-item>
             </ion-col>
-            <ion-col>
+            <ion-col size=2>
               <ion-item>
                 <ion-label position="stacked">{{ 'lastCloned' | translate}}</ion-label>
                 <ion-input type="text" value="{{part.lastCloned | date:'yyyy-MM-dd HH:mm:ss Z' }}" readonly>
