--- a/src/app/protected/cranix/users/lists/users-import.component.html
+++ b/src/app/protected/cranix/users/lists/users-import.component.html
@@ -3,7 +3,7 @@
     <ion-title>My Navigation Bar</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content id="carded">
+<ion-content>
   <ion-card>
     <ion-card-header>
         <ion-toolbar>
