--- a/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
@@ -33,10 +33,17 @@
       </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular 
-        id="agGridTable" style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-        rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}" [context]="context" [rowData]="rowData"
-        [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" headerHeight="150"
+      <ag-grid-angular
+        id="agGridTable"
+        style="width: 100%; height: 100%;"
+        class="{{authService.settings.agGridThema}}"
+        rowSelection="multiple"
+        rowHeight="{{authService.settings.rowHeight}}"
+        [context]="context"
+        [rowData]="rowData"
+        [columnDefs]="columnDefs"
+        [defaultColDef]="defaultColDef"
+        headerHeight="150"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" 
         (firstDataRendered)="headerHeightSetter()"
         (columnResized)="headerHeightSetter()"
