--- a/src/app/protected/cephalix/institutes/lists/institutes.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.html
@@ -52,12 +52,52 @@
       </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular id="agGridTable" style="width: 100%; height: 100%;" rowSelection="multiple"
-        class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" [context]="context"
-        [rowData]="objectService.allObjects['institute']" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
+      <ag-grid-angular
+        *ngIf="!authService.isMobile"
+        id="agGridTable"
+        style="width: 100%; height: 100%;"
+        rowSelection="multiple"
+        class="{{authService.settings.agGridThema}}"
+        rowHeight="{{authService.settings.rowHeight}}"
+        [context]="context"
+        [rowData]="objectService.allObjects['institute']"
+        [columnDefs]="columnDefs"
+        [defaultColDef]="defaultColDef"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-        (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)">
+        (selectionChanged)="selectionChanged()"
+        (gridReady)="onGridReady($event)">
       </ag-grid-angular>
+      <ion-list *ngIf="authService.isMobile">
+        <ion-item-sliding *ngFor="let object of rowData">
+          <ion-item>
+            <ion-note slot="start">
+              <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
+            </ion-note>
+            <ion-label>
+              <h2>{{ object.name }}</h2>
+              <p>{{ object.regCode }}</p>
+            </ion-label>
+            <ion-note slot="end">
+              <p>{{ object.locality }}</p>
+              <p>{{ object.instituteType | translate }}</p>
+            </ion-note>
+          </ion-item>
+          <ion-item-options side="end">
+            <ion-button fill="clear" (click)="redirectToDelete(object)">
+              <ion-icon color="danger" name="trash-outline"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="redirectToEdit(object)">
+              <ion-icon name="build-sharp"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="openActions($event,object)">
+              <ion-icon name="ellipsis-vertical-sharp"></ion-icon>
+            </ion-button>
+            <ion-button *ngIf="object.ipVPN && object.ipVN != ''" color="secondary" fill="clear" size="small"  (click)="routeInstitute(object)">
+              <ion-icon name="create-outline" style="height:15px;width:15px"></ion-icon>
+            </ion-button>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
     </ion-card-content>
   </ion-card>
 </ion-content>
