--- a/src/app/protected/cranix/devices/lists/devices.component.html
+++ b/src/app/protected/cranix/devices/lists/devices.component.html
@@ -48,20 +48,53 @@
             matTooltip="{{'Apply actions on the selected objects' | translate }}">
             <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
           </ion-button>
-          <ion-button size="small" fill="solid" (click)="openCollums($event)"
+          <!-- ion-button size="small" fill="solid" (click)="openCollums($event)"
             matTooltip="{{'Select the columns to show' | translate }}">
             <ion-icon slot="icon-only" name="apps"></ion-icon>
-          </ion-button>
+          </ion-button -->
         </ion-buttons>
       </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular style="width: 100%; height:  100%;" rowSelection="multiple"
+      <ag-grid-angular *ngIf="!authService.isMobile" style="width: 100%; height:  100%;" rowSelection="multiple"
         class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}"
         rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}" [context]="context"
         [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [rowData]="rowData" (gridReady)="onGridReady($event)"
+        (selectionChanged)="selectionChanged()"
         id="agGridTable">
       </ag-grid-angular>
+      <ion-list *ngIf="authService.isMobile">
+        <ion-item-sliding *ngFor="let object of rowData">
+          <ion-item>
+            <ion-note slot="start">
+              <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
+            </ion-note>
+            <ion-label>
+              <h2>{{ object.name }}</h2>
+              <p>{{ object.ip }}</p>
+            </ion-label>
+            <ion-note slot="end">
+              <p>{{ object.mac }}</p>
+              <p>{{ object.hwconfId | idToName:'hwconf' }}</p>
+              <p>{{ object.roomId | idToName:'room' }}</p>
+            </ion-note>
+          </ion-item>
+          <ion-item-options side="end">
+            <ion-button fill="clear" (click)="setDhcp(object)">
+              <ion-icon color="danger" name="server"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="redirectToDelete(object)">
+              <ion-icon color="danger" name="trash-outline"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="redirectToEdit(object)">
+              <ion-icon name="build-sharp"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="openActions($event,object)">
+              <ion-icon name="ellipsis-vertical-sharp"></ion-icon>
+            </ion-button>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
     </ion-card-content>
   </ion-card>
 </ion-content>
