--- a/src/app/protected/cranix/devices/lists/printers.component.html
+++ b/src/app/protected/cranix/devices/lists/printers.component.html
@@ -19,9 +19,9 @@
       <ion-fab-button>
         <ion-icon name="print-outline" (click)="addPrinter($event)" disabled></ion-icon>
       </ion-fab-button>
-      <ion-fab-button>
+      <!-- ion-fab-button>
         <ion-icon name="apps" (click)="openCollums($event)"></ion-icon>
-      </ion-fab-button>
+      </ion-fab-button -->
     </ion-fab-list>
   </ion-fab>
   <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('printerFilterMD')"
@@ -59,11 +59,39 @@
       </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular style="width: 100%; height:  100%;" class="{{authService.settings.agGridThema}}"
+      <ag-grid-angular *ngIf="!authService.isMobile" style="width: 100%; height:  100%;" class="{{authService.settings.agGridThema}}"
         rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}" [context]="context" [rowData]="objectService.allObjects['printer']"
         [columnDefs]="columnDefs" [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
+        (selectionChanged)="selectionChanged()"
         (gridReady)="onGridReady($event)" id="agGridTable">
       </ag-grid-angular>
+      <ion-list *ngIf="authService.isMobile">
+        <ion-item-sliding *ngFor="let object of rowData">
+          <ion-item>
+            <ion-note slot="start">
+              <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
+            </ion-note>
+            <ion-label>
+              {{ object.name }}
+            </ion-label>
+            <ion-note slot="end">
+              {{ object.model }}<br>
+              {{ object.activeJobs }}
+            </ion-note>
+          </ion-item>
+          <ion-item-options side="end">
+            <ion-button fill="clear" (click)="redirectToDelete(object)">
+              <ion-icon color="danger" name="trash-outline"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="redirectToEdit(object)">
+              <ion-icon name="build-sharp"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="reset($event,object.id)">
+              <ion-icon name="refresh"></ion-icon>
+            </ion-button>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
     </ion-card-content>
   </ion-card>
 </ion-content>
