--- a/src/app/protected/cranix/groups/groups.page.html
+++ b/src/app/protected/cranix/groups/groups.page.html
@@ -14,11 +14,11 @@
         <ion-icon name="ellipsis-vertical-sharp" (click)="openActions($event,null)"></ion-icon>
       </ion-fab-button>
       <ion-fab-button>
-        <ion-icon name="add-circle" (click)="redirectToEdit($event,null)"></ion-icon>
+        <ion-icon name="add-circle" (click)="redirectToEdit(null)"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button>
+      <!-- ion-fab-button>
         <ion-icon name="apps" (click)="openCollums($event)"></ion-icon>
-      </ion-fab-button>
+      </ion-fab-button -->
     </ion-fab-list>
   </ion-fab>
   <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('groupsFilterMD')"
@@ -36,7 +36,7 @@
           </ion-input>
         </ion-item>
         <ion-buttons slot="end">
-          <ion-button size="small" fill="solid" (click)="redirectToEdit($event,null)"
+          <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
             matTooltip="{{'Create a new group' | translate }}">
             <ion-icon slot="icon-only" name="add-circle"></ion-icon>
           </ion-button>
@@ -53,6 +53,7 @@
     </ion-card-header>
     <ion-card-content>
       <ag-grid-angular
+        *ngIf="!authService.isMobile"
         style="width: 100%; height: 100%;"
         rowSelection="multiple"
         class="{{authService.settings.agGridThema}}"
@@ -62,8 +63,36 @@
         [rowData]="objectService.allObjects['group']"
         [columnDefs]="columnDefs"
         (gridReady)="onGridReady($event)"
+        (selectionChanged)="selectionChanged()"
         id="groupsPageTable">
       </ag-grid-angular>
+      <ion-list *ngIf="authService.isMobile">
+        <ion-item-sliding *ngFor="let object of rowData">
+          <ion-item>
+            <ion-note slot="start">
+              <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
+            </ion-note>
+            <ion-label>
+              <h2>{{ object.name }}</h2>
+              <p>{{ object.description }}</p>
+            </ion-label>
+            <ion-note slot="end">
+              {{ object.groupType | translate }}
+            </ion-note>
+          </ion-item>
+          <ion-item-options side="end">
+            <ion-button fill="clear" (click)="redirectToDelete(object)">
+              <ion-icon color="danger" name="trash-outline"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="redirectToMembers(object)">
+              <ion-icon name="people-circle"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="redirectToEdit(object)">
+              <ion-icon name="build-sharp"></ion-icon>
+            </ion-button>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
     </ion-card-content>
   </ion-card>
 </ion-content>
