--- a/src/app/protected/cranix/hwconfs/hwconfs.page.html
+++ b/src/app/protected/cranix/hwconfs/hwconfs.page.html
@@ -11,8 +11,8 @@
       </ion-fab-button>
       <ion-fab-list side="start">
         <ion-fab-button><ion-icon name="ellipsis-vertical-sharp" (click)="openActions($event,null)"></ion-icon></ion-fab-button>
-        <ion-fab-button><ion-icon name="add-circle" (click)="redirectToEdit($event,null)"></ion-icon></ion-fab-button>
-        <ion-fab-button><ion-icon name="apps" (click)="openCollums($event)"></ion-icon></ion-fab-button>
+        <ion-fab-button><ion-icon name="add-circle" (click)="redirectToEdit(null)"></ion-icon></ion-fab-button>
+        <!-- ion-fab-button><ion-icon name="apps" (click)="openCollums($event)"></ion-icon></ion-fab-button -->
       </ion-fab-list>
     </ion-fab>
     <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('hwconfsFilterMD')" id="hwconfsFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
@@ -28,7 +28,7 @@
           </ion-input>
         </ion-item>
         <ion-buttons slot="end">
-          <ion-button size="small" fill="solid" (click)="redirectToEdit($event,null)"
+          <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
             matTooltip="{{'Create a new hardware configuration' | translate }}">
             <ion-icon slot="icon-only" name="add-circle"></ion-icon>
           </ion-button>
@@ -45,6 +45,7 @@
     </ion-card-header>
     <ion-card-content>
       <ag-grid-angular
+        *ngIf="!authService.isMobile"
         id="agGridTable"
         style="width: 100%; height: 100%;"
         rowSelection="multiple"
@@ -55,8 +56,36 @@
         [columnDefs]="columnDefs"
         [defaultColDef]="defaultColDef"
         [context]="context"
-        (gridReady)="onGridReady($event)">
+        (gridReady)="onGridReady($event)"
+        (selectionChanged)="selectionChanged()">
       </ag-grid-angular>
+      <ion-list *ngIf="authService.isMobile">
+        <ion-item-sliding *ngFor="let object of rowData">
+          <ion-item>
+            <ion-note slot="start">
+              <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
+            </ion-note>
+            <ion-label>
+              {{ object.name }}
+            </ion-label>
+            <ion-note slot="end">
+              {{ object.description }}<br>
+              {{ object.deviceType | translate }}
+            </ion-note>
+          </ion-item>
+          <ion-item-options side="end">
+            <ion-button fill="clear" (click)="redirectToDelete(object)">
+              <ion-icon color="danger" name="trash-outline"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="redirectToMembers(object)">
+              <ion-icon name="people-circle"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="redirectToEdit(object)">
+              <ion-icon name="build-sharp"></ion-icon>
+            </ion-button>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
     </ion-card-content>
   </ion-card>
 </ion-content>
