--- a/src/app/protected/cranix/mygroups/mygroups.page.html
+++ b/src/app/protected/cranix/mygroups/mygroups.page.html
@@ -27,7 +27,7 @@
         </ion-item>
         <ion-buttons slot="end">
           <ion-button *ngIf="segment == 'group' || (segment == 'group' && authService.isAllowed('user.add.students'))"
-            size="small" fill="solid" (click)="redirectToEdit($event,null)"
+            size="small" fill="solid" (click)="redirectToEdit(null)"
             matTooltip="{{'Create a new ' + segment | translate }}">
             <ion-icon slot="icon-only" name="add-circle"></ion-icon>
           </ion-button>
@@ -43,10 +43,12 @@
       </ion-toolbar>
     </ion-card-header>
     <ion-card-content style="height: 600px;">
-      <ag-grid-angular 
-        id="myGroupsTable" style="width: 100%; height: 100%;" 
+      <ag-grid-angular
+        *ngIf="!authService.isMobile"
+        id="myGroupsTable"
+        style="width: 100%; height: 100%;"
         rowSelection="multiple"
-        class="{{authService.settings.agGridThema}}" 
+        class="{{authService.settings.agGridThema}}"
         rowHeight="{{authService.settings.rowHeight}}"
         rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}"
         animateRows="true"
@@ -54,9 +56,41 @@
         [context]="context"
         [rowData]="rowData"
         [columnDefs]="columnDefs"
-        [defaultColDef]="defaultColDef" 
+        [defaultColDef]="defaultColDef"
+        (selectionChanged)="selectionChanged()"
         (gridReady)="onGridReady($event)">
       </ag-grid-angular>
+      <ion-list *ngIf="authService.isMobile">
+        <ion-item-sliding *ngFor="let object of rowData">
+          <ion-item>
+            <ion-note slot="start">
+              <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
+            </ion-note>
+            <ion-label *ngIf="segment == 'group'">
+              {{ object.name }}
+            </ion-label>
+            <ion-label *ngIf="segment == 'user'">
+              <h2>{{ object.surName }}, {{ object.givenName }}, ( {{ object.uid }} )</h2>
+              <p>{{ object.groupName }}</p>
+            </ion-label>
+            <ion-note *ngIf="segment == 'group'" slot="end">
+              {{ object.description }}<br>
+              {{ object.groupType | translate }}
+            </ion-note>
+          </ion-item>
+          <ion-item-options *ngIf="segment == 'group' && (authService.isAllowed('group.modify') || authService.session.userId == object.ownerId)" side="end">
+            <ion-button fill="clear" (click)="redirectToDelete(object)">
+              <ion-icon color="danger" name="trash-outline"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="redirectToMembers(object)">
+              <ion-icon name="people-circle"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="redirectToEdit(object)">
+              <ion-icon name="build-sharp"></ion-icon>
+            </ion-button>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
     </ion-card-content>
   </ion-card>
 </ion-content>
