--- a/src/app/protected/cranix/rooms/lists/rooms.component.html
+++ b/src/app/protected/cranix/rooms/lists/rooms.component.html
@@ -14,11 +14,11 @@
         <ion-icon name="ellipsis-vertical-sharp" (click)="openActions($event,null)"></ion-icon>
       </ion-fab-button>
       <ion-fab-button>
-        <ion-icon name="add-circle" (click)="redirectToEdit($event,null)"></ion-icon>
+        <ion-icon name="add-circle" (click)="redirectToEdit(null)"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button>
+      <!-- ion-fab-button>
         <ion-icon name="apps" (click)="openCollums($event)"></ion-icon>
-      </ion-fab-button>
+      </ion-fab-button -->
     </ion-fab-list>
   </ion-fab>
   <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('roomsFilterMD')" id="roomsFilterMD"
@@ -35,7 +35,7 @@
           </ion-input>
         </ion-item>
         <ion-buttons slot="end">
-          <ion-button size="small" fill="solid" (click)="redirectToEdit($event,null)"
+          <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
             matTooltip="{{'Create a new room' | translate }}">
             <ion-icon slot="icon-only" name="add-circle"></ion-icon>
           </ion-button>
@@ -51,7 +51,8 @@
       </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular 
+      <ag-grid-angular
+        *ngIf="!authService.isMobile"
         id="roomsComponentTable"
         style="width: 100%; height: 100%;"
         class="{{authService.settings.agGridThema}}"
@@ -62,8 +63,44 @@
         [defaultColDef]="defaultColDef"
         rowSelection="multiple"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
+        (selectionChanged)="selectionChanged()"
         (gridReady)="onGridReady($event)">
       </ag-grid-angular>
+      <ion-list *ngIf="authService.isMobile">
+        <ion-item-sliding *ngFor="let object of rowData">
+          <ion-item>
+            <ion-note slot="start">
+              <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
+            </ion-note>
+            <ion-label>
+              <h2>{{ object.name }}</h2>
+              <p>{{ object.description }}</p>
+            </ion-label>
+            <ion-note slot="end">
+              <p>{{ object.roomType | translate }}</p>
+              <p>{{ object.roomControl | translate }}</p>
+              <p *ngIf="object.hwconfId">{{ object.hwconfId | idToName:'hwconf' }}</p>
+            </ion-note>
+          </ion-item>
+          <ion-item-options side="end">
+            <ion-button fill="clear" (click)="setDhcp(object)">
+              <ion-icon color="danger" name="server"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="redirectToDelete(object)">
+              <ion-icon color="danger" name="trash-outline"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="setPrinters(object)">
+              <ion-icon color="print" name="server"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="devices(object)">
+              <ion-icon name="desktop"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="redirectToEdit(object)">
+              <ion-icon name="build-sharp"></ion-icon>
+            </ion-button>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
     </ion-card-content>
   </ion-card>
 </ion-content>
