--- a/src/app/protected/cranix/users/lists/users.component.html
+++ b/src/app/protected/cranix/users/lists/users.component.html
@@ -19,7 +19,7 @@
           <ion-icon name="ellipsis-vertical-sharp" (click)="openActions($event,null)"></ion-icon>
         </ion-fab-button>
         <ion-fab-button>
-          <ion-icon name="add-circle" (click)="redirectToEdit($event,null)"></ion-icon>
+          <ion-icon name="add-circle" (click)="redirectToEdit(null)"></ion-icon>
         </ion-fab-button>
         <ion-fab-button>
           <ion-icon name="apps" (click)="openCollums($event)"></ion-icon>
@@ -40,7 +40,7 @@
           </ion-input>
         </ion-item>
         <ion-buttons slot="end">
-          <ion-button size="small" fill="solid" (click)="redirectToEdit($event,null)"
+          <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
             matTooltip="{{'Create a new user' | translate }}">
             <ion-icon slot="icon-only" name="add-circle"></ion-icon>
           </ion-button>
@@ -56,11 +56,48 @@
       </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
-        rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}"
-        rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}" [rowData]="objectService.allObjects['user']"
-        [columnDefs]="columnDefs" [context]="context" (gridReady)="onGridReady($event)" id="agGridTable">
+      <ag-grid-angular
+        *ngIf="!authService.isMobile"
+        style="width: 100%; height: 100%;"
+        class="{{authService.settings.agGridThema}}"
+        rowSelection="multiple"
+        rowHeight="{{authService.settings.rowHeight}}"
+        rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}"
+        [rowData]="objectService.allObjects['user']"
+        [columnDefs]="columnDefs"
+        [context]="context"
+        (gridReady)="onGridReady($event)"
+        (selectionChanged)="selectionChanged()"
+        id="agGridTable">
       </ag-grid-angular>
+      <ion-list *ngIf="authService.isMobile">
+        <ion-item-sliding *ngFor="let object of rowData">
+          <ion-item>
+            <ion-note slot="start">
+              <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
+            </ion-note>
+            <ion-label>
+              <h2>{{ object.uid }}</h2>
+              <p>{{ object.surName }} {{ object.givenName }}</p>
+            </ion-label>
+            <ion-note slot="end">
+              <p>{{ object.role | translate }}</p>
+              <p>{{ object.classes }}</p>
+            </ion-note>
+          </ion-item>
+          <ion-item-options side="end">
+            <ion-button fill="clear" (click)="redirectToDelete(object)">
+              <ion-icon color="danger" name="trash-outline"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="redirectToGroups(object)">
+              <ion-icon name="people"></ion-icon>
+            </ion-button>
+            <ion-button fill="clear" (click)="redirectToEdit(object)">
+              <ion-icon name="build-sharp"></ion-icon>
+            </ion-button>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
     </ion-card-content>
   </ion-card>
 </ion-content>
