--- a/src/app/protected/cranix/security/proxy/proxy.component.html
+++ b/src/app/protected/cranix/security/proxy/proxy.component.html
@@ -63,7 +63,7 @@
           </ion-input>
         </ion-item>
         <ion-buttons slot="end">
-          <ion-button *ngIf="segment == 'positive'" size="small" fill="solid" (click)="redirectToEdit($event,null)"
+          <ion-button *ngIf="segment == 'positive'" size="small" fill="solid" (click)="redirectToEdit(null)"
             matTooltip="{{'Create a new positive list.' | translate }}">
             <ion-icon slot="icon-only" name="add-circle"></ion-icon>
           </ion-button>
