--- a/src/app/protected/cranix/softwares/sets/installation-sets.component.html
+++ b/src/app/protected/cranix/softwares/sets/installation-sets.component.html
@@ -10,7 +10,7 @@
     <ion-icon name="arrow-forward-circle"></ion-icon>
   </ion-fab-button>
   <ion-fab-list side="start">
-    <ion-fab-button><ion-icon name="add-circle" (click)="redirectToEdit($event,null)"></ion-icon></ion-fab-button>
+    <ion-fab-button><ion-icon name="add-circle" (click)="redirectToEdit(null)"></ion-icon></ion-fab-button>
     <ion-fab-button><ion-icon name="pencil-outline" (click)="applyState()"></ion-icon></ion-fab-button>
     <ion-fab-button><ion-icon name="refresh-outline" (click)="applyState()"></ion-icon></ion-fab-button>
   </ion-fab-list>
@@ -28,7 +28,7 @@
           </ion-input>
         </ion-item>
         <ion-buttons slot="end">
-          <ion-button size="small" fill="solid" (click)="redirectToEdit($event,null)"  matTooltip="{{'Create a new installation set' | translate }}">
+          <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"  matTooltip="{{'Create a new installation set' | translate }}">
             <ion-icon slot="icon-only" name="add-circle"></ion-icon>
           </ion-button>
           <ion-button size="small" fill="solid" (click)="writeConfig()"  matTooltip="{{'Write state files for the devices' | translate }}">
