--- a/src/app/protected/cephalix/tickets/tickets.page.html
+++ b/src/app/protected/cephalix/tickets/tickets.page.html
@@ -1,39 +1,21 @@
 <cranix-toolbar></cranix-toolbar>
-<ion-content id="carded">
-  <ion-row class="header-row">
-    <ion-col>
-      <ion-title>{{'Manage tickets' | translate}}</ion-title>
-    </ion-col>
-  </ion-row>
-  <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
-    <ion-fab-button>
-      <ion-icon name="arrow-forward-circle"></ion-icon>
-    </ion-fab-button>
-    <ion-fab-list side="start">
-      <ion-fab-button>
-        <ion-icon name="ellipsis-vertical-sharp" (click)="openActions($event,null)"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="add-circle" (click)="redirectToEdit(null,null)"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="apps" (click)="openCollums($event)"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
-  </ion-fab>
-  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('ticketsFilterMD')"
-    id="ticketsFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
+<ion-row class="header-row">
+  <ion-col>
+    <ion-title>{{'Manage tickets' | translate}}</ion-title>
+  </ion-col>
+</ion-row>
+<ion-content *ngIf="!authService.isMD()" id="carded">
   <ion-card>
     <ion-card-header>
       <ion-card-title>{{'Manage tickets' | translate}}</ion-card-title>
       <ion-toolbar>
-          <ion-item>
-            <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('ticketsFilter')"
-              id="ticketsFilter">
-            </ion-input>
-          </ion-item>
+        <ion-item>
+          <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('ticketsFilter')"
+            id="ticketsFilter">
+          </ion-input>
+        </ion-item>
         <ion-buttons slot="end">
-          <ion-button size="small" fill="solid" (click)="redirectToEdit(null,null)"
+          <ion-button size="small" fill="solid" (click)="redirectToEdit(null)"
             matTooltip="{{'Create a new ticket' | translate }}">
             <ion-icon slot="icon-only" name="add-circle"></ion-icon>
           </ion-button>
@@ -49,18 +31,42 @@
       </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular
-        style="width: 100%; height: 100%;"
-        rowSelection="multiple"
-        class="{{authService.settings.agGridThema}}"
-        rowHeight="{{authService.settings.rowHeight}}"
-        [context]="context"
-        [rowData]="objectService.allObjects['ticket']"
-        [columnDefs]="columnDefs"
-        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-        (gridReady)="onGridReady($event)"
+      <ag-grid-angular style="width: 100%; height: 100%;" rowSelection="multiple"
+        class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" [context]="context"
+        [rowData]="objectService.allObjects['ticket']" [columnDefs]="columnDefs"
+        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="onGridReady($event)"
         id="ticketsPageTable">
       </ag-grid-angular>
     </ion-card-content>
   </ion-card>
+</ion-content>
+<ion-content *ngIf="authService.isMD()">
+  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('ticketsFilterMD')"
+    id="ticketsFilterMD" showCancelButton="never"></ion-searchbar>
+  <ion-list>
+    <ion-item-sliding *ngFor="let object of rowData">
+      <ion-item style="color: {{ticketColor[object.ticketStatus]}}" (click)="redirectToEdit(object)">
+        <!-- ion-note slot="start">
+          <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
+        </ion-note -->
+        <ion-label>
+          <h2>{{ object.title }}</h2>
+          {{ object.recDate | date:'yy-MM-dd HH:mm' }}
+        </ion-label>
+        <ion-note style="max-width: 200px;" slot="end">
+          {{ object.email }} <br>
+          {{ object.firstname }} {{ object.lastname }}<br>
+          <div *ngIf="object.cephalixInstituteId">{{ object.cephalixInstituteId | idToName:'institute' }}</div>
+        </ion-note>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-button fill="clear" (click)="redirectToDelete(object)">
+          <ion-icon color="danger" name="trash-outline"></ion-icon>
+        </ion-button>
+        <ion-button fill="clear" (click)="redirectToEdit(object)">
+          <ion-icon name="build-sharp"></ion-icon>
+        </ion-button>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
