--- a/src/app/protected/cranix/devices/lists/devices.component.html
+++ b/src/app/protected/cranix/devices/lists/devices.component.html
@@ -1,30 +1,12 @@
 <cranix-toolbar></cranix-toolbar>
-<ion-content id="carded">
-  <ion-row class="header-row">
-    <ion-col>
-      <ion-title *ngIf="!selectedRoom">{{'Manage devices' | translate}}</ion-title>
-      <ion-title *ngIf="selectedRoom">{{'Manage devices in selected room:' | translate}} {{selectedRoom.name}}
-      </ion-title>
-    </ion-col>
-  </ion-row>
-  <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
-    <ion-fab-button>
-      <ion-icon name="arrow-forward-circle"></ion-icon>
-    </ion-fab-button>
-    <ion-fab-list side="start">
-      <ion-fab-button>
-        <ion-icon name="ellipsis-vertical-sharp" (click)="openActions($event,null)"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="add-circle" (click)="addDevice($event)"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="apps" (click)="openCollums($event)"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
-  </ion-fab>
-  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('devicesFilterMD')"
-    id="devicesFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
+<ion-row class="header-row">
+  <ion-col>
+    <ion-title *ngIf="!selectedRoom">{{'Manage devices' | translate}}</ion-title>
+    <ion-title *ngIf="selectedRoom">{{'Manage devices in selected room:' | translate}} {{selectedRoom.name}}
+    </ion-title>
+  </ion-col>
+</ion-row>
+<ion-content *ngIf="!authService.isMD()" id="carded">
   <ion-card>
     <ion-card-header>
       <ion-toolbar>
@@ -56,45 +38,64 @@
       </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular *ngIf="!authService.isMobile" style="width: 100%; height:  100%;" rowSelection="multiple"
+      <ag-grid-angular style="width: 100%; height:  100%;" rowSelection="multiple"
         class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}"
         rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}" [context]="context"
         [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [rowData]="rowData" (gridReady)="onGridReady($event)"
-        (selectionChanged)="selectionChanged()"
-        id="agGridTable">
+        (selectionChanged)="selectionChanged()" id="agGridTable">
       </ag-grid-angular>
-      <ion-list *ngIf="authService.isMobile">
-        <ion-item-sliding *ngFor="let object of rowData">
-          <ion-item>
-            <ion-note slot="start">
-              <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
-            </ion-note>
-            <ion-label>
-              <h2>{{ object.name }}</h2>
-              <p>{{ object.ip }}</p>
-            </ion-label>
-            <ion-note slot="end">
-              <p>{{ object.mac }}</p>
-              <p>{{ object.hwconfId | idToName:'hwconf' }}</p>
-              <p>{{ object.roomId | idToName:'room' }}</p>
-            </ion-note>
-          </ion-item>
-          <ion-item-options side="end">
-            <ion-button fill="clear" (click)="setDhcp(object)">
-              <ion-icon color="danger" name="server"></ion-icon>
-            </ion-button>
-            <ion-button fill="clear" (click)="redirectToDelete(object)">
-              <ion-icon color="danger" name="trash-outline"></ion-icon>
-            </ion-button>
-            <ion-button fill="clear" (click)="redirectToEdit(object)">
-              <ion-icon name="build-sharp"></ion-icon>
-            </ion-button>
-            <ion-button fill="clear" (click)="openActions($event,object)">
-              <ion-icon name="ellipsis-vertical-sharp"></ion-icon>
-            </ion-button>
-          </ion-item-options>
-        </ion-item-sliding>
-      </ion-list>
     </ion-card-content>
   </ion-card>
+</ion-content>
+<ion-content *ngIf="authService.isMD()">
+  <ion-fab vertical="top" horizontal="end" slot="fixed">
+    <ion-fab-button size="small">
+      <ion-icon name="arrow-forward-circle"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="start">
+      <ion-fab-button>
+        <ion-icon name="ellipsis-vertical-sharp" (click)="openActions($event,null)"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button>
+        <ion-icon name="add-circle" (click)="addDevice($event)"></ion-icon>
+      </ion-fab-button>
+      <!-- ion-fab-button>
+        <ion-icon name="apps" (click)="openCollums($event)"></ion-icon>
+      </ion-fab-button -->
+    </ion-fab-list>
+  </ion-fab>
+  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('devicesFilterMD')"
+    id="devicesFilterMD" showCancelButton="never"></ion-searchbar>
+  <ion-list>
+    <ion-item-sliding *ngFor="let object of rowData">
+      <ion-item>
+        <ion-note slot="start">
+          <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
+        </ion-note>
+        <ion-label (click)="redirectToEdit(object)">
+          <h2>{{ object.name }}</h2>
+          <p>{{ object.ip }}</p>
+        </ion-label>
+        <ion-note style="max-width: 200px;" slot="end">
+          <p>{{ object.mac }}</p>
+          <p>{{ object.hwconfId | idToName:'hwconf' }}</p>
+          <p>{{ object.roomId | idToName:'room' }}</p>
+        </ion-note>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-button fill="clear" (click)="setDhcp(object)">
+          <ion-icon color="danger" name="server"></ion-icon>
+        </ion-button>
+        <ion-button fill="clear" (click)="redirectToDelete(object)">
+          <ion-icon color="danger" name="trash-outline"></ion-icon>
+        </ion-button>
+        <ion-button fill="clear" (click)="redirectToEdit(object)">
+          <ion-icon name="build-sharp"></ion-icon>
+        </ion-button>
+        <ion-button fill="clear" (click)="openActions($event,object)">
+          <ion-icon name="ellipsis-vertical-sharp"></ion-icon>
+        </ion-button>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
