--- a/src/app/protected/cranix/users/lists/users.component.html
+++ b/src/app/protected/cranix/users/lists/users.component.html
@@ -1,33 +1,11 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>My Navigation Bar</ion-title>
-  </ion-toolbar>
-</ion-header>
-<ion-content id="carded">
+<cranix-toolbar></cranix-toolbar>
+<ion-row class="header-row">
+  <ion-col>
+    <ion-title>{{'Manage users' | translate}}</ion-title>
+  </ion-col>
+</ion-row>
+<ion-content *ngIf="!authService.isMD()" id="carded">
   <ion-card>
-    <ion-row class="header-row">
-      <ion-col>
-        <ion-title>{{'Manage users' | translate}}</ion-title>
-      </ion-col>
-    </ion-row>
-    <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
-      <ion-fab-button>
-        <ion-icon name="arrow-forward-circle"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-list side="start">
-        <ion-fab-button>
-          <ion-icon name="ellipsis-vertical-sharp" (click)="openActions($event,null)"></ion-icon>
-        </ion-fab-button>
-        <ion-fab-button>
-          <ion-icon name="add-circle" (click)="redirectToEdit(null)"></ion-icon>
-        </ion-fab-button>
-        <ion-fab-button>
-          <ion-icon name="apps" (click)="openCollums($event)"></ion-icon>
-        </ion-fab-button>
-      </ion-fab-list>
-    </ion-fab>
-    <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('usersFilterMD')"
-      id="usersFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
     <ion-card-header>
       <ion-toolbar>
         <ion-card-title>{{'Manage users' | translate}}</ion-card-title>
@@ -57,7 +35,6 @@
     </ion-card-header>
     <ion-card-content>
       <ag-grid-angular
-        *ngIf="!authService.isMobile"
         style="width: 100%; height: 100%;"
         class="{{authService.settings.agGridThema}}"
         rowSelection="multiple"
@@ -70,34 +47,51 @@
         (selectionChanged)="selectionChanged()"
         id="agGridTable">
       </ag-grid-angular>
-      <ion-list *ngIf="authService.isMobile">
-        <ion-item-sliding *ngFor="let object of rowData">
-          <ion-item>
-            <ion-note slot="start">
-              <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
-            </ion-note>
-            <ion-label>
-              <h2>{{ object.uid }}</h2>
-              <p>{{ object.surName }} {{ object.givenName }}</p>
-            </ion-label>
-            <ion-note slot="end">
-              <p>{{ object.role | translate }}</p>
-              <p>{{ object.classes }}</p>
-            </ion-note>
-          </ion-item>
-          <ion-item-options side="end">
-            <ion-button fill="clear" (click)="redirectToDelete(object)">
-              <ion-icon color="danger" name="trash-outline"></ion-icon>
-            </ion-button>
-            <ion-button fill="clear" (click)="redirectToGroups(object)">
-              <ion-icon name="people"></ion-icon>
-            </ion-button>
-            <ion-button fill="clear" (click)="redirectToEdit(object)">
-              <ion-icon name="build-sharp"></ion-icon>
-            </ion-button>
-          </ion-item-options>
-        </ion-item-sliding>
-      </ion-list>
     </ion-card-content>
   </ion-card>
+</ion-content>
+<ion-content *ngIf="authService.isMD()">
+  <ion-fab vertical="top" horizontal="end" slot="fixed">
+    <ion-fab-button size="small">
+      <ion-icon name="arrow-forward-circle"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="start">
+      <ion-fab-button (click)="openActions($event,null)">
+        <ion-icon name="ellipsis-vertical-sharp"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button (click)="redirectToEdit(null)">
+        <ion-icon name="add-circle"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
+  <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('usersFilterMD')"
+    id="usersFilterMD" showCancelButton="never"></ion-searchbar>
+  <ion-list>
+    <ion-item-sliding *ngFor="let object of rowData">
+      <ion-item>
+        <ion-note slot="start">
+          <ion-checkbox (ionChange)="checkChange($event,object)"></ion-checkbox>
+        </ion-note>
+        <ion-label (click)="redirectToEdit(object)">
+          <h2>{{ object.uid }}</h2>
+          {{ object.surName }} {{ object.givenName }}
+        </ion-label>
+        <ion-note style="max-width: 200px;" slot="end">
+          {{ object.role | translate }}<br>
+          {{ object.classes }}
+        </ion-note>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-button fill="clear" (click)="redirectToDelete(object)">
+          <ion-icon color="danger" name="trash-outline"></ion-icon>
+        </ion-button>
+        <ion-button fill="clear" (click)="redirectToGroups(object)">
+          <ion-icon name="people"></ion-icon>
+        </ion-button>
+        <ion-button fill="clear" (click)="redirectToEdit(object)">
+          <ion-icon name="build-sharp"></ion-icon>
+        </ion-button>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
