--- a/src/app/protected/edu/lessons/tabs/mypositive/mypositive.component.html
+++ b/src/app/protected/edu/lessons/tabs/mypositive/mypositive.component.html
@@ -10,7 +10,7 @@
       <ion-icon name="arrow-forward-circle"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="start">
-      <ion-fab-button><ion-icon name="add-circle" (click)="redirectToEdit($event,null)"></ion-icon></ion-fab-button>
+      <ion-fab-button><ion-icon name="add-circle" (click)="redirectToEdit(null)"></ion-icon></ion-fab-button>
       <!-- ion-fab-button><ion-icon name="trash-outline" (click)="delete($event)"></ion-icon></ion-fab-button -->
       <ion-fab-button><ion-icon color="success" name="power-outline" (click)="activate($event)"></ion-icon></ion-fab-button>
       <ion-fab-button><ion-icon color="danger"  name="power-outline" (click)="deactivate($event)"></ion-icon></ion-fab-button>
@@ -27,7 +27,7 @@
           </ion-item>
         </ion-col>
         <ion-col offset="6" size="3" class="ion-align-self-center ion-text-end hidden-xs hidden-sm hidden-md">
-          <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'Create new positive list.' | translate }}">
+          <ion-button size="small" (click)="redirectToEdit(null)"  matTooltip="{{'Create new positive list.' | translate }}">
             <ion-icon slot="icon-only" name="add-circle"></ion-icon>
           </ion-button>
           <!-- ion-button size="small" (click)="delete($event)" matTooltip="{{'Delete selected positive lists.' | translate }}">
