--- a/src/app/protected/toolbar/toolbar.component.html
+++ b/src/app/protected/toolbar/toolbar.component.html
@@ -11,9 +11,7 @@
       </ion-button>
       <ion-button fill="clear" target="_blank" href="https://wiki.cephalix.eu">
         <ion-icon color="tertiary" name="book"></ion-icon>
-      </ion-button>      <!--ion-button fill="clear" (click)="closeWindow()">
-        <ion-badge color="secondary" slot="end">118k</ion-badge>
-      </ion-button -->
+      </ion-button>
       <ion-button fill="clear" (click)="retirectToSettings($event)" matTooltip="{{ 'Edit user preferences' | translate }}">
         <ion-icon color="success" name="person"></ion-icon>
       </ion-button>
