--- a/src/app/protected/cephalix/tickets/details/details.page.html
+++ b/src/app/protected/cephalix/tickets/details/details.page.html
@@ -4,11 +4,6 @@
     <ion-card-header>
       <ion-toolbar>
         <ion-card-title>#{{ticket.id}} {{ticket.title}}</ion-card-title>
-        <ion-buttons slot="end">
-          <ion-button (click)="deleteTicket()">
-            <ion-icon slot="icon-only" name="trash"></ion-icon>
-          </ion-button>
-        </ion-buttons>
         <ion-card-subtitle *ngIf="institute.id != 0"> {{ticket.recDate | date:'yy-MM-dd HH:mm'}} {{ institute.name }}
           {{ institute.regCode }}
           {{ institute.ipVPN }}<br>
@@ -23,6 +18,14 @@
           </ion-button><br>
           {{ticket.email}}: {{ticket.lastname}},{{ticket.firstname}}
         </ion-card-subtitle>
+        <ion-buttons slot="end">
+          <ion-button (click)="deleteTicket()">
+            <ion-icon color="danger" slot="icon-only" name="trash"></ion-icon>
+          </ion-button>
+          <ion-button (click)="router.navigate(['/pages/cephalix/tickets'])">
+            <ion-icon slot="icon-only" name="caret-back"></ion-icon>
+          </ion-button>
+        </ion-buttons>
       </ion-toolbar>
     </ion-card-header>
   </ion-card>
