--- a/src/app/protected/cranix/security/firewall/firewall.component.html
+++ b/src/app/protected/cranix/security/firewall/firewall.component.html
@@ -1,71 +1,40 @@
 <cranix-toolbar></cranix-toolbar>
-<ion-content id="carded">
-  <ion-row class="header-row">
-    <ion-col>
-      <ion-title>{{ 'Manage firewall configuration' | translate}}</ion-title>
-    </ion-col>
-  </ion-row>
-  <ion-row class="header-row">
-    <ion-col>
-      <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="in">
-        <ion-segment-button value="in" layout="icon-start">
-          <ion-label class="hidden-xs hidden-sm">{{'Incoming rules' | translate}}</ion-label>
-          <ion-icon name="log-in"></ion-icon>
-        </ion-segment-button>
-        <ion-segment-button value="out" layout="icon-end">
-          <ion-label class="hidden-xs hidden-sm">{{'Outgoing rules' | translate}}</ion-label>
-          <ion-icon name="log-out"></ion-icon>
-        </ion-segment-button>
-        <ion-segment-button value="remote" layout="icon-start">
-          <ion-label class="hidden-xs hidden-sm">{{'Remote access' | translate}}</ion-label>
-          <ion-icon name="shuffle"></ion-icon>
-        </ion-segment-button>
-      </ion-segment>
-    </ion-col>
-  </ion-row>
-  <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
-    <ion-fab-button>
-      <ion-icon name="arrow-forward-circle"></ion-icon>
-    </ion-fab-button>
-    <ion-fab-list side="start">
-      <ion-fab-button (click)="applyChanges()">
-        <ion-icon slot="icon-only" name="checkmark"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button *ngIf="segment == 'out'" (click)="addOutgoinRule()">
-        <ion-icon name="add-circle"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button *ngIf="segment == 'out'" (click)="deleteOutgoinRule()">
-        <ion-icon name="trash-outline"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button *ngIf="segment == 'remote'" (click)="addRemoteRule()">
-        <ion-icon name="add-circle"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button *ngIf="segment == 'remote'" (click)="deleteRemoteRule()">
-        <ion-icon name="trash-outline"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button (click)="restartFirewall()">
-        <ion-icon name="refresh-outline"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button (click)="stopFirewall()">
-        <ion-icon name="close-outline"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
-  </ion-fab>
+<ion-row class="header-row">
+  <ion-col>
+    <ion-title>{{ 'Manage firewall configuration' | translate}}</ion-title>
+  </ion-col>
+</ion-row>
+<ion-row *ngIf="authService.isMD()">
+  <ion-col>
+    <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="in">
+      <ion-segment-button value="in" layout="icon-start">
+        <ion-icon name="log-in"></ion-icon>
+      </ion-segment-button>
+      <ion-segment-button value="out" layout="icon-end">
+        <ion-icon name="log-out"></ion-icon>
+      </ion-segment-button>
+      <ion-segment-button value="remote" layout="icon-start">
+        <ion-icon name="shuffle"></ion-icon>
+      </ion-segment-button>
+    </ion-segment>
+  </ion-col>
+</ion-row>
+<ion-content *ngIf="!authService.isMD()" id="carded">
   <ion-card>
     <ion-card-header>
       <ion-toolbar>
         <ion-card-title>{{ 'Manage firewall configuration' | translate}}</ion-card-title>
         <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="in">
           <ion-segment-button value="in" layout="icon-start">
-            <ion-label class="hidden-xs hidden-sm">{{'Incoming rules' | translate}}</ion-label>
+            <ion-label>{{'Incoming rules' | translate}}</ion-label>
             <ion-icon name="log-in"></ion-icon>
           </ion-segment-button>
           <ion-segment-button value="out" layout="icon-end">
-            <ion-label class="hidden-xs hidden-sm">{{'Outgoing rules' | translate}}</ion-label>
+            <ion-label>{{'Outgoing rules' | translate}}</ion-label>
             <ion-icon name="log-out"></ion-icon>
           </ion-segment-button>
           <ion-segment-button value="remote" layout="icon-start">
-            <ion-label class="hidden-xs hidden-sm">{{'Remote access' | translate}}</ion-label>
+            <ion-label>{{'Remote access' | translate}}</ion-label>
             <ion-icon name="shuffle"></ion-icon>
           </ion-segment-button>
         </ion-segment>
@@ -186,4 +155,34 @@
       </ag-grid-angular>
     </ion-card-content>
   </ion-card>
+</ion-content>
+<ion-content *ngIf="authService.isMD()">
+  <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
+    <ion-fab-button size="small">
+      <ion-icon name="arrow-forward-circle"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="start">
+      <ion-fab-button (click)="applyChanges()">
+        <ion-icon slot="icon-only" name="checkmark"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button *ngIf="segment == 'out'" (click)="addOutgoinRule()">
+        <ion-icon name="add-circle"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button *ngIf="segment == 'out'" (click)="deleteOutgoinRule()">
+        <ion-icon name="trash-outline"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button *ngIf="segment == 'remote'" (click)="addRemoteRule()">
+        <ion-icon name="add-circle"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button *ngIf="segment == 'remote'" (click)="deleteRemoteRule()">
+        <ion-icon name="trash-outline"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button (click)="restartFirewall()">
+        <ion-icon name="refresh-outline"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button (click)="stopFirewall()">
+        <ion-icon name="close-outline"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
 </ion-content>
